--- a/flex.css
+++ b/flex.css
@@ -1,1 +1,11 @@
 
+img{
+width:300px;
+height:300px;
+margin:5px;
+transition:all 2s;
+box-shadow:5px 10px #888888;
+}
+img:hover{
+transform:translate(50px, 100px) scale(2);
+}
